# just-oc

./: .gitmodules  AGENTS.md  LICENSE  README.md  bandwidth_analysis.py  benchmark_sha256.py  btree_storage_analysis.py  kilo.jsonc  monte_carlo_pi_validation.py  package-lock.json  package.json  quantitative_validation_report.md  setup-symlinks.sh  symlink-opencode.sh  test_bounded_search.py
.kilo/agents/: agentic_engineer_worker.md  backend_developer_worker.md  builder_lead.md  business_analyst_worker.md  ceo.md  frontend_developer_worker.md  researcher_worker.md  (+6 more)
.kilo/skills/yt/scripts/: pyproject.toml
.kilo/skills/yt/scripts/yt_cli/: main.py  search.py
.opencode/: opencode.json
.swarm/: context.md  dark-matter.md  doc-manifest.json  knowledge.jsonl  telemetry.jsonl
agents/: code_review_worker.md  monitoring_worker.md  payment_processor_worker.md  utility_agent.md
analysis/: classification_report.md  pipeline_coordinator_plane_allocation.md
analysis_output/: websocket_capacity_analysis.py
architecture/: ADR-001-payment-microservices-architecture.md
autoresearch/: __main__.py  plot.py  program.md
design/: recursion_guard_design.md
harness/: build_poller.py  monitoring_harness.py  new_agent_loop.py  orchestrator_bounds.py  payment_guard.py  recursion_audit.jsonl  recursion_guard.py  recursion_guard_SPEC.md  recursive_loop.py
plugins/: README.md
research/: cdn-mechanism-analysis.md
src/: server.js
tests/: test_bounded_editor.py  test_monitoring_worker.py  test_monitoring_worker_behavioral.py  test_new_agent.py  test_recursion_guard.py
(+747 files in other folders)
