[project]
name = "yt-cli-tool"
version = "0.1.0"
description = "YouTube CLI: search videos, get transcripts, browse history and playlists"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "youtube-transcript-api>=1.0.0",
]

[project.scripts]
yt-cli = "yt_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["yt_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
